--- a/index.html
+++ b/index.html
@@ -22,10 +22,16 @@
       <div class="loader">
         <div class="loader_inner"><i class="fa fa-spinner fa-pulse"></i></div>
       </div>
-      <div class="leftbar"><a href="" class="leftbarshow">История</a></div>
-      <div class="rightbar"><a href="" class="rightbarshow">Правила</a></div>
+      <div class="leftbar"><a href="" class="leftbarshow"><i class="fa fa-history"></i></a>
+        <ul class="posts">
+
+        </ul>
+      </div>
+      <div class="rightbar"><a href="" class="rightbarshow"><i class="fa fa-info-circle"></i></a>
+      <p class="rightbartext"></p>
+      </div>
       <header>
-       <div class="img-bg"><a title="Taki taki" href="/"><img class="logo" src="img/logo.png"></a></div>
+       <div class="img-bg"><a title="Taki taki" href="http://sanomchik.github.io/takitaki/"><img class="logo" src="img/logo.png"></a></div>
      </header>
      <section id="start">
       <div class="col-md-12 col-sm-12 col-xs-12">
