--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title></title>
+  <title>Таки таки, алкогольная игра</title>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="keywords" content="Игра, таки таки" />
+  <meta name="author" content="Александ Геец" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700,600' rel='stylesheet' type='text/css'>
