--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Таки таки, алкогольная игра</title>
+  <title>Таки таки</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="keywords" content="Игра, таки таки" />
+  <meta name="keywords" content="Игра, таки таки, алкогольная игра" />
   <meta name="author" content="Александ Геец" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -27,12 +27,13 @@
         <div class="loader_inner"><i class="fa fa-spinner fa-pulse"></i></div>
       </div>
       <div class="leftbar"><a href="" class="leftbarshow"><i class="fa fa-history"></i></a>
+        <h4>Осталось : <span class="count"></span></h4>
         <ul class="posts">
 
         </ul>
       </div>
       <div class="rightbar"><a href="" class="rightbarshow"><i class="fa fa-info-circle"></i></a>
-      <p class="rightbartext"></p>
+        <p class="rightbartext"></p>
       </div>
       <header>
        <div class="img-bg"><a title="Taki taki" href="http://sanomchik.github.io/takitaki/"><img class="logo" src="img/logo.png"></a></div>
@@ -56,11 +57,7 @@
       </div>
     </div>    
     <script src="js/jquery-2.2.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/jquery.waypoints.min.js"></script>
-    <script src="js/PageScroll2id.min.js"></script>
-    <script src="js/smoothscroll.js"></script>
+    <script src="js/bootstrap.js"></script>>
     <script src="js/main.js"></script>
   </body>
   </html>
