--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
         <div class="loader_inner"><i class="fa fa-spinner fa-pulse"></i></div>
       </div>
       <div class="leftbar"><a href="" class="leftbarshow"><i class="fa fa-history"></i></a>
+        <div class="twitbox"><a href="https://twitter.com/share" class="twitter-share-button" data-url="http://http://sanomchik.github.io/takitaki/" data-text="Играю в taki taki на" data-via="Sanomchik" data-size="large">Tweet</a>
+          <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        </div>
         <h4>Осталось : <span class="count"></span></h4>
         <ul class="posts">
 
