--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       </div>
     </div>    
     <script src="js/jquery-2.2.1.min.js"></script>
-    <script src="js/bootstrap.js"></script>>
+    <script src="js/bootstrap.js"></script>
     <script src="js/main.js"></script>
   </body>
   </html>
