--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="modal fade bs-example-modal-md" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel">
       <div class="modal-dialog modal-md">
         <div class="modal-content text-center">
-          <img src="img/logo.jpg" height="350px" alt=""><br>
+          <img src="img/logo.jpg" height="350" alt=""><br>
           <button type="button" class="btn btn-default btn-lg" data-dismiss="modal">Начать</button>
         </div>
       </div>
